# test-py-pipelines

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml  testing.yaml
