[tool.poetry]
name = "test-py-pipelines"
version = "0.2.52"
description = "A test package for testing Python pipelines"
authors = ["Marco Enrico Piras <kikkomep@crs4.it>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["test", "pipelines"]
repository = "https://github.com/kikkomep/test-py-pipelines.git"
packages = [{ include = "test_py_pipelines", from = "." }]
documentation = "https://github.com/kikkomep/test-py-pipelines.git/docs"
# classifiers = [
#     "Topic :: Software Development :: Build Tools",
#     "Topic :: Software Development :: Libraries :: Python Modules",
#     "Topic :: Software Development :: Testing :: Validation",
# ]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
