[tool.poetry]
name = "test-py-pipelines"
version = "0.2.73"
description = "A test package for testing Python pipelines"
authors = ["Marco Enrico Piras <kikkomep@crs4.it>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["test", "pipelines"]
repository = "https://github.com/kikkomep/test-py-pipelines.git"
packages = [{ include = "test_py_pipelines", from = "." }]
documentation = "https://github.com/kikkomep/test-py-pipelines.git/docs"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Internet :: WWW/HTTP :: Semantic Web"
]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
