[tool.poetry]
name = "test-py-pipelines"
version = "0.2.73"
description = "A test package for testing Python pipelines"
authors = ["Marco Enrico Piras <kikkomep@crs4.it>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["test", "pipelines"]
repository = "https://github.com/kikkomep/test-py-pipelines.git"
packages = [{ include = "test_py_pipelines", from = "." }]
documentation = "https://github.com/kikkomep/test-py-pipelines.git/docs"
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
